--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+//    id 'com.google.devtools.ksp'
+    id 'com.google.devtools.ksp'
 }
 
 android {
@@ -10,7 +13,7 @@ android {
     defaultConfig {
         applicationId "com.hfad.weathera"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -34,7 +37,9 @@ android {
         jvmTarget = '1.8'
     }
 }
-
+//kapt {
+//    generateStubs = true
+//}
 dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0' // Змініть версію на останню доступну
@@ -50,4 +55,22 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
+    implementation "androidx.room:room-runtime:2.6.1"
+    implementation "androidx.room:room-ktx:2.6.1"
+//    annotationProcessor "androidx.room:room-compiler:2.6.1"
+    ksp 'androidx.room:room-compiler:2.6.1'
+    ksp("com.google.devtools.ksp:symbol-processing:1.9.10-1.0.13")
+
+//    implementation "androidx.room:room-android:2.6.1"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+
+
+
+
+
+
+
 }
